Add database resolver

--- a/themes/navy/languages/en.yml
+++ b/themes/navy/languages/en.yml
@@ -59,6 +59,7 @@ sidebar:
     settings: Settings
 
     advanced_topics: Advanced Topics
+    dbresolver: Database Resolver
     prometheus: Prometheus
     hints: Hints
     indexes: Indexes
