New Crowdin updates (#261)
* New translations changelog.md (Chinese Simplified)

* New translations models.md (Chinese Simplified)

* New translations create.md (Japanese)

* New translations create.md (Japanese)

* New translations update.md (Japanese)

* New translations en.yml (French)

* New translations dbresolver.md (Korean)

* New translations en.yml (Indonesian)

* New translations dbresolver.md (Chinese Simplified)

* New translations en.yml (Chinese Simplified)

* New translations dbresolver.md (Turkish)

* New translations en.yml (Turkish)

* New translations dbresolver.md (Russian)

* New translations en.yml (Russian)

* New translations dbresolver.md (Polish)

* New translations en.yml (Polish)

* New translations en.yml (Korean)

* New translations dbresolver.md (French)

* New translations dbresolver.md (Japanese)

* New translations en.yml (Japanese)

* New translations dbresolver.md (Italian)

* New translations en.yml (Italian)

* New translations dbresolver.md (German)

* New translations en.yml (German)

* New translations dbresolver.md (Arabic)

* New translations en.yml (Arabic)

* New translations dbresolver.md (Spanish)

* New translations en.yml (Spanish)

* New translations dbresolver.md (Indonesian)

* Update source file index.md

* Update source file dbresolver.md

* Update source file index.md

* Update source file en.yml

* New translations index.md (French)

* New translations index.md (Korean)

* New translations index.md (Indonesian)

* New translations index.md (Chinese Simplified)

* New translations index.md (Chinese Simplified)

* New translations index.md (Turkish)

* New translations index.md (Turkish)

* New translations index.md (Russian)

* New translations index.md (Russian)

* New translations index.md (Polish)

* New translations index.md (Polish)

* New translations index.md (Korean)

* New translations index.md (French)

* New tr

--- a/themes/navy/languages/ru_RU.yml
+++ b/themes/navy/languages/ru_RU.yml
@@ -53,6 +53,7 @@ sidebar:
     scopes: Области
     settings: Настройки
     advanced_topics: Дополнительные возможности
+    dbresolver: Резолвер базы данных
     prometheus: Prometheus
     hints: Подсказки
     indexes: Индексы
