--- a/themes/navy/languages/en.yml
+++ b/themes/navy/languages/en.yml
@@ -54,7 +54,7 @@ sidebar:
     logger: Logger
     generic_interface: Generic Database Interface
     performance: Performance
-    data_types: Custimize Data Types
+    data_types: Customize Data Types
     scopes: Scopes
     settings: Settings
 
