--- a/themes/navy/languages/tr_TR.yml
+++ b/themes/navy/languages/tr_TR.yml
@@ -4,7 +4,7 @@ menu:
   docs: <i class="fa fa-book"></i>Dökümanlar
   api: <i class="fa fa-cogs"></i>API
   github: <i class="fa fa-github"></i>Github
-  community: <i class="fab fa-slack"></i>Community
+  community: <i class="fab fa-slack"></i>Topluluk
   contribute: <i class="fa fa-rocket"></i>Katıl
   search: Belgelerde ara...
 index:
@@ -32,38 +32,38 @@ sidebar:
     raw_sql_and_builder: Ham SQL Çalıştırma & SQL Oluşturucu
     batch: Toplu İşlem Çalıştırma
     associations: Model İlişkileri
-    belongs_to: Belongs To
+    belongs_to: Ait
     has_one: Has One
     has_many: Has Many
-    many_to_many: Many To Many
+    many_to_many: Çoktan Çoka
     association_mode: Association Mode
     preload: Preloading (Eager Loading)
-    tutorials: Tutorials
+    tutorials: Rehberler
     context: Context
     error_handling: Error Handling
     method_chaining: Method Chaining
-    session: Session
-    hooks: Hooks
-    transactions: Transactions
-    migration: Migration
+    session: Oturum
+    hooks: Hooklar
+    transactions: İşlemler
+    migration: Aktarım
     logger: Logger
     generic_interface: Generic Database Interface
-    performance: Performance
+    performance: Performans
     data_types: Customize Data Types
-    scopes: Scopes
-    settings: Settings
-    advanced_topics: Advanced Topics
+    scopes: Kapsam
+    settings: Ayarlar
+    advanced_topics: İleri düzey Konular
     dbresolver: Database Resolver
     prometheus: Prometheus
-    hints: Hints
-    indexes: Indexes
-    constraints: Constraints
+    hints: İpuçları
+    indexes: İndeksler
+    constraints: Kısıtlamalar
     composite_primary_key: Composite Primary Key
-    security: Security
+    security: Güvenlik
     gorm_config: GORM Config
     write_plugins: Write Plugins
     write_driver: Write Driver
-    change_log: ChangeLog
-    community: Community
-    contribute: Contribute
-    translate: Translate current site
+    change_log: Sürüm Bilgileri
+    community: Topluluk
+    contribute: Katkıda bulunun
+    translate: Şu anki siteyi çevir
